--- a/src/app/pages/articles/articles.component.scss
+++ b/src/app/pages/articles/articles.component.scss
@@ -33,7 +33,7 @@
 
         &.selected {
             background-color: var(--mat-sys-inverse-primary);
-            color: var(--mat-primary-color);
+            color: var(--mat-sys-primary);
         }
     }
 }
