--- a/src/app/pages/profile/profile-header/profile-header.component.scss
+++ b/src/app/pages/profile/profile-header/profile-header.component.scss
@@ -222,7 +222,7 @@
     }
 
     a {
-        color: var(--mat-primary-color, #1976d2);
+        color: var(--mat-sys-primary, #1976d2);
         text-decoration: none;
         display: inline-block;
         /* Changed from block to inline-block */
