--- a/src/app/pages/accounts/accounts.component.html
+++ b/src/app/pages/accounts/accounts.component.html
@@ -74,4 +74,7 @@
     <p class="no-accounts">No accounts available</p>
   }
 
+  <button (click)="nostrService.logout();" mat-raised-button color="primary" class="add-account-button">
+    <mat-icon>account_circle_off</mat-icon> Set no active account
+  </button>
 </div>
