feat: Add theme toggle button to switch between dark and light modes

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -67,6 +67,11 @@ nav {
   position: absolute;
 }
 
+.theme-button {
+  position: absolute;
+  right: 16px;
+}
+
 .app-title {
   margin-left: 4px;
   margin-right: 1em;
