refactor: Rename private key class to nsec for consistency in login dialog

--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -132,7 +132,7 @@
 
       <div class="login-options-section">
         <div class="login-options">
-          <mat-card class="login-card private-key" (click)="goToStep(LoginStep.NSEC_LOGIN)">
+          <mat-card class="login-card nsec" (click)="goToStep(LoginStep.NSEC_LOGIN)">
             <mat-card-content>
               <div class="card-content">
                 <mat-icon>key</mat-icon>
