--- a/src/app/components/login-dialog/login-dialog.component.scss
+++ b/src/app/components/login-dialog/login-dialog.component.scss
@@ -141,7 +141,7 @@
     background: linear-gradient(90deg, #9c27b0, #673ab7);
   }
 
-  &.private-key::after {
+  &.nsec::after {
     background: linear-gradient(90deg, #673ab7, #3f51b5);
   }
   
