refactor: Update login dialog content and styles for clarity and consistency

--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -145,8 +145,8 @@
             <mat-card-content>
               <div class="card-content">
                 <div class="card-text">
-                  <h3><mat-icon>extension</mat-icon>Browser Extension</h3>
-                  <p>Connect via Alby or nos2x</p>
+                  <h3><mat-icon>extension</mat-icon>Extension</h3>
+                  <p>Connect via browser extension</p>
                 </div>
               </div>
             </mat-card-content>
@@ -156,8 +156,8 @@
             <mat-card-content>
               <div class="card-content">
                 <div class="card-text">
-                  <h3><mat-icon>phone_iphone</mat-icon>Nostr Connect</h3>
-                  <p>Sign in with Nostria Signer app</p>
+                  <h3><mat-icon>phone_iphone</mat-icon>Remote Key</h3>
+                  <p>Sign in with remote signer</p>
                 </div>
               </div>
             </mat-card-content>
