--- a/src/styles.scss
+++ b/src/styles.scss
@@ -664,12 +664,12 @@ iframe {
 }
 
 /* Welcome dialog styles */
-.welcome-dialog {
-  .mat-mdc-dialog-container .mdc-dialog__surface {
-    border-radius: 16px;
-    overflow: hidden;
-  }
-}
+// .welcome-dialog {
+//   .mat-mdc-dialog-container .mdc-dialog__surface {
+//     border-radius: 16px;
+//     overflow: hidden;
+//   }
+// }
 
 .minor-icon {
   color: var(--mat-sys-on-surface-variant);
