--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -8,20 +8,23 @@
         </div>
 
         <div class="welcome-content">
-            <div class="welcome-logo-container">
-                <img src="icons/icon.svg" alt="Nostria logo" class="welcome-logo">
-            </div>
-            <div>
-                <h1>Welcome to Nostria</h1>
-                <p>
-                    Discover the future of social media with Nostria - Your Social Media.
-                </p>
-                <p>Seamlessly manage multiple accounts, connect to any relay, and navigate a sleek, intuitive interface
-                    designed for
-                    effortless exploration, sharing, and connection. With global scaling, Nostria delivers a stellar
-                    experience
-                    to users everywhere, no matter your location. Amplify your voice, your way!
-                </p>
+            <div class="welcome-content-container">
+                <div class="welcome-logo-container">
+                    <img src="icons/icon.svg" alt="Nostria logo" class="welcome-logo">
+                </div>
+                <div>
+                    <h1>Welcome to Nostria</h1>
+                    <p>
+                        Discover the future of social media with Nostria - Your Social Media.
+                    </p>
+                    <p>Seamlessly manage multiple accounts, connect to any relay, and navigate a sleek, intuitive
+                        interface
+                        designed for
+                        effortless exploration, sharing, and connection. With global scaling, Nostria delivers a stellar
+                        experience
+                        to users everywhere, no matter your location. Amplify your voice, your way!
+                    </p>
+                </div>
             </div>
         </div>
 
